--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -2,6 +2,31 @@
 @import "./global/variables.scss";
 @import "./global/global.scss";
 @import "./global/fonts.scss";
+@import "./global/visually-hidden.scss";
+@import "./global/common.scss";
 
 /* BLOCKS */
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/main.scss";
 @import "./blocks/header.scss";
+@import "./blocks/option.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/aside.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/product-list.scss";
+@import "./blocks/additional-catalog.scss";
+@import "./blocks/additional-column.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/info-block.scss";
+@import "./blocks/data-section.scss";
+@import "./blocks/radio-button.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/comments.scss";
+@import "./blocks/additional.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/footer-top.scss";
+@import "./blocks/footer-bottom.scss";
+@import "./blocks/social.scss";
+@import "./blocks/htmlacademy.scss";
