--- a/source/styles/global/fonts.scss
+++ b/source/styles/global/fonts.scss
@@ -1,1 +1,3 @@
-/* здесь подключите шрифты*/
+
+@include font-face("Lato-Regular", 400, normal, url("/source/fonts/lato/Lato-Regular.woff2") format("woff2"));
+@include font-face("Oswald-Regular", 400, normal, url("/source/fonts/lato/Lato-Regular.woff2") format("woff2"));
