--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,5 +1,6 @@
 /* GLOBAL */
 @import "./global/variables.scss";
+@import "./global/mixins.scss";
 @import "./global/global.scss";
 @import "./global/fonts.scss";
 @import "./global/visually-hidden.scss";
@@ -30,3 +31,8 @@
 @import "./blocks/footer-bottom.scss";
 @import "./blocks/social.scss";
 @import "./blocks/htmlacademy.scss";
+
+body{
+  background-color: aqua;
+  color: brown;
+}
