--- a/source/styles/global/fonts.scss
+++ b/source/styles/global/fonts.scss
@@ -1,3 +1,2 @@
-
-@include font-face("Lato-Regular", 400, normal, url("/source/fonts/lato/Lato-Regular.woff2") format("woff2"));
-@include font-face("Oswald-Regular", 400, normal, url("/source/fonts/lato/Lato-Regular.woff2") format("woff2"));
+@include font-face("Lato", 400, normal, url("/source/fonts/lato/Lato-Regular.woff2") format("woff2"));
+@include font-face("Oswald", 400, normal, url("/source/fonts/oswald/oswaldregular.woff2") format("woff2"));
