--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -1,1 +1,15 @@
-/* здесь используйте глобальные переменные */
+$primary-font: "Lato", sans-serif;
+$title-font: "Oswald", sans-serif;
+$black: #000000;
+$black_1: #111111;
+$black_2: #222222;
+$grey_3e: #3e3e3e;
+$grey_4: #444444;
+$grey_6: #666666;
+$light_cd: #cdcdcd;
+$light_d3: #d3d3d3;
+$light_ea: #eaeaea;
+$light_f2: #f2f2f2;
+$white: #ffffff;
+$green_38: #68b738;
+$green_2: #5eaa2f;
