--- a/source/styles/blocks/additional-catalog.scss
+++ b/source/styles/blocks/additional-catalog.scss
@@ -2,9 +2,9 @@
 
 .additional-catalog__title {
   font-family: $title-font;
-  font-size: 36px;
+  font-size: 24px;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 24px;
   text-align: center;
   color: $black;
 }
@@ -19,20 +19,24 @@
 
 .additional-catalog__table-title {
   font-family: $title-font;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 16px;
   text-align: center;
   color: $black_2;
 }
 
 .additional-catalog__table-cell {
   font-family: $primary-font;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 14px;
   text-align: center;
   color: $grey_4;
+}
+
+.additional-catalog__table-price {
+  text-align: right;
 }
 
 .additional-catalog__button-order {
