--- a/source/styles/blocks/footer-top.scss
+++ b/source/styles/blocks/footer-top.scss
@@ -10,9 +10,9 @@
 
 .footer-top__title {
   font-family: $title-font;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 20px;
   text-align: left;
   color: $black_1;
 }
@@ -20,10 +20,10 @@
 // .footer-top__address-wrapper {}
 
 .footer-top__address.footer-top__city {
-  font-family: $title-font;
-  font-size: 20px;
+  font-family: $primary-font;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 20px;
   text-align: left;
   color: $grey_4;
 }
