--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -2,29 +2,29 @@
 
 .header__title {
   font-family: $title-font;
-  font-size: 60px;
+  font-size: 36px;
   font-weight: 400;
-  line-height: 60px;
-  text-align: left;
-  color: $black;
+  line-height: 36px;
+  text-align: center;
+  color: $white;
 }
 
 .header__paragraph {
   font-family: $title-font;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 14px;
   text-align: left;
-  color: $black;
+  color: $white;
 }
 
 // .header__image{}
 
 .header__button {
   font-family: $title-font;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 20px;
   text-align: center;
   color: $white;
   background-color: $green_38;
