--- a/source/styles/blocks/option.scss
+++ b/source/styles/blocks/option.scss
@@ -8,29 +8,29 @@
 
 .option__title {
   font-family: $title-font;
-  font-size: 36px;
+  font-size: 24px;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 37px;
   text-align: left;
   color: $black;
 }
 
 .option__paragraph {
   font-family: $primary-font;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 18px;
   text-align: left;
-  color: $black;
+  color: $grey_4;
 }
 
 // .option__button-link{}
 
 .option-button {
   font-family: $title-font;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 16px;
   text-align: center;
   color: $black;
 }
