--- a/source/styles/blocks/site-list.scss
+++ b/source/styles/blocks/site-list.scss
@@ -2,9 +2,9 @@
 
 .site-list__item {
   font-family: $title-font;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 20px;
   text-align: left;
-  background: $black;
+  color: $black;
 }
