Частично добавила векторную графику

--- a/source/styles/blocks/additional-column.scss
+++ b/source/styles/blocks/additional-column.scss
@@ -1,4 +1,6 @@
 .additional-column {
+  background-image: url("../../images/icons/stack.svg#catalog_icon_gift");
+  color: $white;
   background-color: $green_38;
   opacity: 85;
 }
