--- a/source/styles/global/global.scss
+++ b/source/styles/global/global.scss
@@ -1,1 +1,32 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее*/
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+html {
+  height: 100%;
+  font-size: 14px;
+  font-family: "Oswald", "Lato", sans-serif;
+  line-height: 18px;
+}
+
+body {
+  min-height: 100%;
+  margin: 0;
+  background-color: $white;
+  color: #000000;
+}
