--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -4,4 +4,23 @@
 
 // .main-nav__wrapper{}
 
-// .main-nav__list{}
+.main-nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+@media (min-width: $tablet-width) {
+.main-nav__wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 436px;
+  margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav__wrapper {
+    width: 478px;
+  }
+}
