--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -13,3 +13,6 @@ $light_f2: #f2f2f2;
 $white: #ffffff;
 $green_38: #68b738;
 $green_2: #5eaa2f;
+$tablet-width: 768px;
+$desktop-width: 1200px;
+$mobile-width-only: 767px;
