--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,6 +1,7 @@
 // .header {}
 
 .header__title {
+  margin: 0;
   font-family: $title-font;
   font-size: 36px;
   font-weight: 400;
@@ -10,6 +11,7 @@
 }
 
 .header__paragraph {
+  margin: 0;
   font-family: $title-font;
   font-size: 14px;
   font-weight: 400;
