--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -18,9 +18,42 @@
   color: $light_f2;
 }
 
-// .advantages__list{}
+.advantages__list{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 0;
+  counter-reset: number 0;
+}
 
-// .advantages__item{}
+.advantages__item {
+  // position: relative;
+  // width: calc(25% - 30px);
+  // padding-right: 50px;
+  // margin-bottom: 30px;
+  // margin-right: 30px;
+  // counter-increment: number 1;
+&::before{
+  // content: counter(number);
+  // font-size: 100px;
+  // line-height: 80px;
+  // color: #ccc;
+  // position: absolute;
+  // right: 30px;
+  // top: 0;
+  // font-weight: 800;
+  // z-index: -1;
+
+    content: "";
+    background-repeat: no-repeat;
+    background-color: $green_38;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    left: 0;
+    background-position: center;
+    }
+  }
 
 .advantages__image {
   color: $white;
@@ -37,27 +70,26 @@
 }
 
 .advantages__image1::before {
-  background-image:url("images/icons/stack.svg#advantages1");
+  content: "";
+  background-image: url("../../images/icons/stack.svg#advantages1");
   width: 26px;
   height: 31px;
 }
 
-.advantages__image2::before{
-  display: flex;
-  content: url("../images/icons/stack.svg#advantages2");
-  background-color: $green_38;
+.advantages__image2::before {
+    content: url("../../images/icons/stack.svg#advantages2");
   width: 26px;
   height: 31px;
 }
 
-.advantages__image3 {
-  background-image:url("images/icons/stack.svg#advantages3");
+.advantages__image3::before {
+  content: url("../../images/icons/stack.svg#advantages3");
   width: 26px;
   height: 31px;
 }
 
-.advantages__image4 {
-  background-image:url("images/icons/stack.svg#advantages4");
+.advantages__image4::before {
+  content: url("../../images/icons/stack.svg#advantages4");
   width: 26px;
   height: 31px;
 }
