--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,33 +1,75 @@
-// .header {}
+header {
+  display: flex;
+  flex-direction: column;
+  background-color: $white;
+  color: $black;
+  max-width: 280px;
 
-.header__title {
-  margin: 0;
-  font-family: $title-font;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 36px;
-  text-align: center;
-  color: $white;
+  @media (max-width: $tablet-width) {
+    max-width: 709px;
+  }
+
+  @media (min-width: $desktop-width) {
+    justify-content: center;
+    max-height: 499px;
+
+  }
 }
 
-.header__paragraph {
-  margin: 0;
-  font-family: $title-font;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 14px;
-  text-align: left;
-  color: $white;
+.header__image {
+  background-image: url("images/icons/stack.svg#logo_mobile");
+  width: 33px;
+  height: 38px;
 }
 
-// .header__image{}
+.header__logo--text {
+  background-image: url ("images/icons/stack.svg#logo_cat_energy");
+  width: 101px;
+  height: 18px;
+}
 
-.header__button {
-  font-family: $title-font;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
-  text-align: center;
-  color: $white;
-  background-color: $green_38;
+.header__logo {
+  height: 85px;
+}
+
+@media (min-width: $tablet-width) {
+  .header__image {
+    background-image: url("images/icons/stack.svg#logo_tablet");
+    order: 2;
+    width: 60px;
+    height: 50px;
+  }
+
+  .header__logo--text{
+    order: 2;
+    width: 101px;
+    height: 18px;
+  }
+
+  .header__logo {
+    order: 2;
+    width: 174px;
+    height: 50px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .header__image {
+    background-image: url("images/icons/stack.svg#logo_desktop");
+    order: 2;
+    width: 70px;
+    height: 59px;
+  }
+
+  .header__logo--text{
+    order: 2;
+    width: 118px;
+    height: 21px;
+  }
+
+  .header__logo {
+    order: 2;
+    width: 202px;
+    height: 59px;
+  }
 }
