--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -7,8 +7,8 @@
 @import "./global/common.scss";
 
 /* BLOCKS */
-@import "./blocks/main-header.scss";
-@import "./blocks/main-nav.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/nav.scss";
 @import "./blocks/site-list.scss";
 @import "./blocks/main.scss";
 @import "./blocks/header.scss";
@@ -19,7 +19,6 @@
 @import "./blocks/product-list.scss";
 @import "./blocks/additional-catalog.scss";
 @import "./blocks/additional-column.scss";
-@import "./blocks/main-container.scss";
 @import "./blocks/info-block.scss";
 @import "./blocks/data-section.scss";
 @import "./blocks/radio-button.scss";
