--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,7 +1,7 @@
 // .example {
 
 // }
-.example__text {
+.example__paragraph {
   font-family: $primary-font;
   font-size: 16px;
   line-height: 24px;
