--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -9,6 +9,7 @@ $grey_6: #666666;
 $light_cd: #cdcdcd;
 $light_d3: #d3d3d3;
 $light_ea: #eaeaea;
+$light_e7: #e7e7e7;
 $light_f2: #f2f2f2;
 $white: #ffffff;
 $green_38: #68b738;
