--- a/source/styles/blocks/additional-catalog.scss
+++ b/source/styles/blocks/additional-catalog.scss
@@ -1,7 +1,12 @@
-// .additional-catalog {
+.additional-catalog__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
 
-// }
-.additional-catalog__value .additional-catalog__price {
+.additional-catalog__value,
+.additional-catalog__price {
+  margin: 0;
   font-family: $primary-font;
   font-size: 14px;
   line-height: 14px;
