--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -2,6 +2,7 @@
 
 // }
 .contacts__title {
+  margin: 0;
   font-family: $title-font;
   font-size: 20px;
   line-height: 26px;
@@ -15,4 +16,14 @@
   line-height: 20px;
   text-align: right;
   color: $grey_4;
+}
+
+.contacts__wrapper {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.contacts__map {
+  max-width: 100%;
+  height: auto;
 }
