--- a/source/styles/blocks/dev.scss
+++ b/source/styles/blocks/dev.scss
@@ -1,10 +1,19 @@
-// .dev {
+.dev {
+  display: flex;
+  justify-content: space-betweens;
+  flex-wrap: wrap;
+}
 
-// }
-.dev-text {
+.dev__link {
+  margin: 0;
+  text-decoration: none;
+  color: $grey_4;
+}
+
+.dev__text {
+  margin: 0;
   font-family: $primary-font;
   font-size: 16px;
   line-height: 20px;
   text-align: left;
-  color: $grey_4;
 }
