--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,7 +1,11 @@
-// .example {
+.example__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
-// }
 .example__paragraph {
+  margin: 0;
   font-family: $primary-font;
   font-size: 16px;
   line-height: 24px;
@@ -18,6 +22,7 @@
 }
 
 .example__text {
+  margin: 0;
   font-family: $primary-font;
   font-size: 14px;
   line-height: 14px;
