--- a/source/styles/blocks/nav-list.scss
+++ b/source/styles/blocks/nav-list.scss
@@ -1,7 +1,20 @@
 .nav-list {
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+.nav-list__link {
+  text-decoration: none;
+  color: $black;
+}
+
+.nav-list__item {
+  text-transform: uppercase;
   font-family: $title-font;
   font-size: 18px;
   line-height: 24px;
   text-align: left;
-  color: $black;
 }
