--- a/source/styles/blocks/offer.scss
+++ b/source/styles/blocks/offer.scss
@@ -1,3 +1,12 @@
 // .offer {
 
 // }
+.offer__text {
+  margin: 0;
+  font-family: $primary-font;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: $white;
+  background-color: $green_38;
+}
