--- a/source/styles/blocks/options.scss
+++ b/source/styles/blocks/options.scss
@@ -7,6 +7,7 @@
 }
 
 .options__title {
+  margin: 0;
   font-family: $title-font;
   font-size: 36px;
   line-height: 36px;
@@ -15,6 +16,7 @@
 }
 
 .options__text {
+  margin: 0;
   font-family: $primary-font;
   font-size: 16px;
   line-height: 24px;
@@ -28,4 +30,11 @@
   line-height: 30px;
   text-align: center;
   color: $black;
+}
+
+.options__list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
