--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,3 +1,7 @@
-// .social {
-
-// }
+.social__list {
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 24px;
+}
