--- a/source/styles/global/global.scss
+++ b/source/styles/global/global.scss
@@ -1,9 +1,4 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее*/
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .button {
   width: 244px;
   height: 54px;
@@ -26,6 +21,7 @@ img {
 }
 
 .title-h2 {
+  margin: 0;
   font-family: $title-font;
   font-size: 60px;
   line-height: 60px;
@@ -33,6 +29,7 @@ img {
 }
 
 .title-h3 {
+  margin: 0;
   font-family: $title-font;
   font-size: 16px;
   line-height: 20px;
@@ -64,5 +61,5 @@ body {
   min-height: 100%;
   margin: 0;
   background-color: $white;
-  color: #000000;
+  color: $black;
 }
