--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -23,3 +23,4 @@
 @import "./blocks/offer.scss";
 @import "./blocks/info-block.scss";
 @import "./blocks/radio-button.scss";
+@import "./blocks/form.scss";
